# zkp-nillion

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
docker/: Dockerfile-client  Dockerfile-server  docker-compose.yaml
proto/: zkp_auth.proto
server/: Cargo.toml
src/: client.rs  prover.rs  server.rs  store.rs  verifier.rs  zkp_crypto.rs
