[package]
name = "zkp-nillion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkp-server"
path = "src/server.rs"

[[bin]]
name = "zkp-client"
path = "src/client.rs"

[dependencies]
num = "0.4.0"
rand = "0.8.5"
tonic = "0.8.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
primes = "0.3.0"
prost = "0.11.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }


[build-dependencies]
tonic-build = "0.8.2"
